--- a/Todo1/app/src/main/res/layout/activity_edit_item.xml
+++ b/Todo1/app/src/main/res/layout/activity_edit_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,7 +20,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/editText2" />
 
-    <Button
+    <mehdi.sakout.fancybuttons.FancyButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
@@ -28,6 +29,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:onClick="onSaveItem"
+        fancy:fb_radius="30dp"
+        fancy:fb_borderColor="@color/colorWhite"
+        fancy:fb_borderWidth="1dp"
+        fancy:fb_defaultColor="@color/colorLighterCoral"
         />
 
     <TextView
@@ -42,12 +47,16 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <Button
+    <mehdi.sakout.fancybuttons.FancyButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete"
         android:onClick="onDeleteItem"
         android:id="@+id/deleteButton"
+        fancy:fb_radius="30dp"
+        fancy:fb_borderColor="@color/colorWhite"
+        fancy:fb_borderWidth="1dp"
+        fancy:fb_defaultColor="@color/colorLighterCoral"
         android:layout_alignBottom="@+id/button"
         android:layout_toRightOf="@+id/button"
         android:layout_toEndOf="@+id/button" />
