--- a/Todo1/app/src/main/res/layout/activity_main.xml
+++ b/Todo1/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,12 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.arpithbackup.todoapp.activities.MainActivity">
 
-    <Button
+    <mehdi.sakout.fancybuttons.FancyButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add item"
         android:id="@+id/btnAddItem"
         android:onClick="onAddItem"
+        fancy:fb_radius="30dp"
+        fancy:fb_borderColor="@color/colorWhite"
+        fancy:fb_borderWidth="1dp"
+        fancy:fb_defaultColor="@color/colorLighterCoral"
         android:layout_alignTop="@+id/deleteButton"
         android:layout_toLeftOf="@+id/deleteButton"
         android:layout_toStartOf="@+id/deleteButton" />
@@ -42,25 +47,18 @@
         android:layout_alignEnd="@+id/deleteButton"
         android:layout_above="@+id/btnAddItem" />
 
-    <Button
+    <mehdi.sakout.fancybuttons.FancyButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Remove All"
+        fancy:fb_radius="30dp"
         android:onClick="onDeleteAllItem"
         android:id="@+id/deleteButton"
+        fancy:fb_borderColor="@color/colorWhite"
+        fancy:fb_borderWidth="1dp"
+        fancy:fb_defaultColor="@color/colorLighterCoral"
         android:layout_alignBottom="@+id/etNewItem"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-        <!--android:text="Medium Text"-->
-        <!--android:id="@+id/lvTodoItem"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_alignRight="@+id/btnAddItem"-->
-        <!--android:layout_alignEnd="@+id/btnAddItem" />-->
 </RelativeLayout>
