--- a/Todo1/app/src/main/res/values/colors.xml
+++ b/Todo1/app/src/main/res/values/colors.xml
@@ -4,5 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlueWhale">#0C374D</color>
+    <color name="colorLighterCoral">#F48B4C</color>
+    <color name="colorDaisy">#EBC944</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#ffffff</color>
 
 </resources>
